# audio_vis

./: .gitignore  AUTHORS.txt  Cargo.toml  README.md
docs/: DESIGN.typ
src/: lib.rs  main.rs
src/cmd/: render.rs  view.rs
src/shader/: vertex_fragment.wgsl
