[package]
name = "audio_vis"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Ragib Hasin <ragib.hasin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytemuck = { version = "1.13.1", features = ["derive"] }
euclid = { version = "0.22.9", features = ["bytemuck"] }
itertools = "0.10.5"
rodio = "0.17.1"

futures-channel = "0.3.28"
image = "0.24.6"
pollster = "0.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wgpu = "0.16.1"
winit = "0.28.6"

[profile.dev]
opt-level = 3
